--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@ https://templatemo.com/tm-571-hexashop
     </div>  
     <!-- ***** Preloader End ***** -->
     
-    
+   
     <!-- ***** Header Area Start ***** -->
     <header class="header-area header-sticky">
         <div class="container">
@@ -104,6 +104,8 @@ https://templatemo.com/tm-571-hexashop
                                 <span>Awesome, clean &amp; creative HTML5 Template</span>
                                 <div class="main-border-button">
                                     <a href="#">Purchase Now!</a>
+									 <h1>I Love my Country</h1>
+								  <h1>I Love my Country</h1>
                                 </div>
                             </div>
                             <img src="assets/images/left-banner-image.jpg" alt="">
